# mental-arithmetic

./: Cargo.toml  README.md
.github/workflows/: CD.yml  CI.yml
mental-arithmetic-adapter/: Cargo.toml
mental-arithmetic-adapter/src/controllers/: create_arithmetic.rs  get_arithmetic_result.rs  mod.rs  solve_arithmetic.rs
mental-arithmetic-adapter/src/presenters/: mod.rs
mental-arithmetic-adapter/src/presenters/primitive/: arithmetic_express.rs  arithmetic_result.rs  solve_arithmetic.rs
mental-arithmetic-adapter/src/presenters/stdout/: arithmetic_express.rs  arithmetic_result.rs  mod.rs  solve_arithmetic.rs
mental-arithmetic-cui/: Cargo.toml
mental-arithmetic-cui/src/: core.rs  main.rs
mental-arithmetic-domain/: Cargo.toml
mental-arithmetic-domain/src/models/: arithmetic.rs  constant_value.rs  mod.rs  operator.rs
mental-arithmetic-domain/src/repositories/: arithmetic.rs
mental-arithmetic-gui/: Cargo.toml  index.html
mental-arithmetic-gui/src/: home.rs  main.rs  select_operators.rs  solve_arithmetic.rs
mental-arithmetic-gui/src/components/: button_link.rs  li_item.rs  mod.rs  title.rs
mental-arithmetic-gui/src/components/svg/: addition.rs  division.rs  mod.rs  multiplication.rs  substraction.rs
mental-arithmetic-gui/src/module/: arithmetic.rs  mod.rs  operators.rs  scene.rs
mental-arithmetic-infrastructure/: Cargo.toml
mental-arithmetic-infrastructure/src/: lib.rs
mental-arithmetic-infrastructure/src/inmemories/: arithmetic.rs
mental-arithmetic-usecase/: Cargo.toml
mental-arithmetic-usecase/src/: lib.rs
mental-arithmetic-usecase/src/commands/: create_arithmetic.rs  (+2 more)
(+10 files in other folders)
