[package]
name = "mental-arithmetic-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mental-arithmetic-domain = { path = "../mental-arithmetic-domain" }
mental-arithmetic-usecase = { path = "../mental-arithmetic-usecase" }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
