[package]
name = "mental-arithmetic-cui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mental-arithmetic-usecase = { path = "../mental-arithmetic-usecase" }
mental-arithmetic-adapter = { path = "../mental-arithmetic-adapter" }
mental-arithmetic-infrastructure = { path = "../mental-arithmetic-infrastructure" }
