[package]
name = "mental-arithmetic-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.60", features = ["HtmlTextAreaElement"] }
yew = { version = "0.20.0", features = ["csr"] }
mental-arithmetic-usecase = { path = "../mental-arithmetic-usecase" }
mental-arithmetic-adapter = { path = "../mental-arithmetic-adapter" }
mental-arithmetic-infrastructure = { path = "../mental-arithmetic-infrastructure" }
uuid = { version = "1.2.2", features = ["v4", "js"] }
